[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/Autoanim/Scenes/CharacterDirectoryPopup.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/Autoanim/Scenes/GenerateAnimsControl.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/Autoanim/Scenes/AssetDirectoryPopup.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/Autoanim/Scenes/AutoAnimsMainControl.gd" type="Script" id=4]

[node name="AutoAnimsBaseControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )

[node name="MAIN_SCROLL_CONTAINER" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBOX_LAYOUT" type="VBoxContainer" parent="MAIN_SCROLL_CONTAINER"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HEADER_PANEL" type="Panel" parent="MAIN_SCROLL_CONTAINER/HBOX_LAYOUT"]
margin_right = 1024.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="TITLE_LABEL" type="Label" parent="MAIN_SCROLL_CONTAINER/HBOX_LAYOUT/HEADER_PANEL"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 30 )
text = "AUTOANIM GENERATOR"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="MAIN_SCROLL_CONTAINER/HBOX_LAYOUT"]
margin_top = 34.0
margin_right = 1024.0
margin_bottom = 38.0

[node name="GenerateAnimsControl" parent="MAIN_SCROLL_CONTAINER/HBOX_LAYOUT" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 42.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3

[node name="AssetDirectoryPopup" parent="." instance=ExtResource( 3 )]
margin_right = 315.0
margin_bottom = 130.0
window_title = "Choose you"

[node name="CharacterDirectoryPopup" parent="." instance=ExtResource( 1 )]
margin_right = 315.0
margin_bottom = 130.0
window_title = "Open a Directory"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
margin_right = 200.0
margin_bottom = 70.0
popup_exclusive = true
resizable = true
